# EDA-agent

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt  simple_demo.py  test_tool_integration.py
agents/: __init__.py  base_agent.py  code_agent.py  debug_agent.py  spec_agent.py  verify_agent.py
tools/: __init__.py  simulator.py  synthesizer.py  waveform_viewer.py
